[package]
name = "github-watch"
version = "0.0.1-pr"
edition = "2021"

[dependencies]
axum = "0.7"
hex = "0.4"
json = "0.12"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
secrecy = "0.10.3"
axum-server = { version = "0.7", features = ["rustls", "tls-rustls"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
